--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@
   height: 40vmin;
 }
 
-.App-header {
+/* .App-header {
   background-color: #5d6a8f;
   height: 20vh;
   display: flex;
@@ -17,7 +17,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
