now all of the pictures are there

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -56,6 +56,10 @@
   cursor: pointer;
 }
 
+.component-div {
+  text-align: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
