--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,17 +8,6 @@
   height: 40vmin;
 }
 
-/* .App-header {
-  background-color: #5d6a8f;
-  height: 20vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
 .App-link {
   color: #61dafb;
 }
@@ -56,8 +45,43 @@
   cursor: pointer;
 }
 
+.grid-picture {
+  max-height: 250px;
+}
+
 .component-div {
   text-align: center;
+  display: flex;
+  max-width: 3000px;
+  margin: 4px 2px;
+}
+
+.home-image {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 400px;
+}
+
+.match-div {
+  display: inline-block;
+  width: 40%;
+}
+
+.property-tile {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+}
+
+.property-container {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 @keyframes App-logo-spin {
