--- a/src/components/App.css
+++ b/src/components/App.css
@@ -71,7 +71,7 @@
 }
 
 .match-div {
-  display: inline-block;
+  display: block;
   width: 40%;
 }
 
@@ -80,7 +80,24 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  width: 50%;
+}
+
+.PropertyTile-img-244 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.MuiPaper-root-245.MuiPaper-elevation0-247.PropertyTile-header-243 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.MuiPaper-root-245.MuiPaper-elevation0-247.MuiMobileStepper-root-308.MuiMobileStepper-positionStatic-311 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .property-container {
@@ -88,6 +105,7 @@
   margin-left: auto;
   margin-right: auto;
   display: block;
+  width: 40%;
 }
 
 @keyframes App-logo-spin {
